--- a/package.json
+++ b/package.json
@@ -12,14 +12,20 @@
     "@types/react": "^19.2.14",
     "@types/react-dom": "^19.2.3",
     "@types/react-katex": "^3.0.4",
+    "@types/three": "^0.182.0",
     "@vitejs/plugin-react": "^5.1.4",
     "typescript": "~5.9.3",
     "vite": "^7.3.1"
   },
   "dependencies": {
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.5.0",
     "katex": "^0.16.28",
     "react": "^19.2.4",
     "react-dom": "^19.2.4",
-    "react-katex": "^3.1.0"
+    "react-katex": "^3.1.0",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1",
+    "three": "^0.182.0"
   }
 }
